Fix genealogy menu spacing and help icon (#26) (#223)

--- a/step-web/src/main/webapp/css/J_AppsCss/J_Framework/j_framework.dropdownMenu.css
+++ b/step-web/src/main/webapp/css/J_AppsCss/J_Framework/j_framework.dropdownMenu.css
@@ -67,6 +67,11 @@
     align-items: center;
 }
 
+.jframework-dropdownMenuItem::after {
+    content: '';
+    flex: 0 0 1.75em;
+}
+
 .jframework-dropdownMenuItem:hover {
     background-color: var(--jframework-clrPopUpMenuItemBackgroundSelected);
     color: var(--jframework-clrPopUpMenuItemTextSelected);
